--- a/src/app/utilities/accordion/accordion.component.scss
+++ b/src/app/utilities/accordion/accordion.component.scss
@@ -31,3 +31,9 @@
     border-top: 1px solid #614767;
     border-bottom: 1px solid #614767;
 }
+
+.accordion-content-items:last-child {
+    .content-sections {
+        border-bottom: none;
+    }
+}
