Changes related to bullets

--- a/src/app/utilities/right-accordian/right-accordian.component.html
+++ b/src/app/utilities/right-accordian/right-accordian.component.html
@@ -1,4 +1,4 @@
-<p-accordion (onOpen)="onTabOpen($event)" (onClose)="onTabClose($event)" *ngIf="metaData && metaData.matadata" class="accordion-header">
+<p-accordion (onOpen)="onTabOpen($event)" (onClose)="onTabClose($event)" *ngIf="metaData && metaData.matadata" class="accordion-header no-border">
     <p-accordionTab header="header" class="accordion-header" [header]="eachMetaData.uid" #accordionElements
         *ngFor="let eachMetaData of metaData.matadata;let i =index"  >
         <p-header class="accordion-heading">
@@ -8,11 +8,11 @@
         </p-header>
         <div>
             <ul>
-                <li *ngFor="let content of eachMetaData.data">
+                <li *ngFor="let content of eachMetaData.data" [ngClass]="{'bullets':eachMetaData.data.length > 1 }">
                     <div class="d-flex accordion-heading accordion-item">
                         <div>
                             <span class="input-label-text subheading-label-text"
-                                *ngIf="content.subHeading">{{content.subHeading}}:</span>{{content.content}}
+                                *ngIf="content.subHeading">{{content.subHeading}}: </span>{{content.content}}
                         </div>
                     </div>
                 </li>
