--- a/src/app/utilities/right-accordian/right-accordian.component.scss
+++ b/src/app/utilities/right-accordian/right-accordian.component.scss
@@ -7,7 +7,7 @@
     cursor: pointer;
 }
 .accordion-heading {
-    padding: 25px 15px 25px 45px;
+    padding: 25px 15px 25px 27px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,6 +15,7 @@
 .accordion-title {
     font-size: 16px;
     font-weight: 600;
+    margin-right: 25px;
 }
 .input-label-text {
     // line-height: 18px;
@@ -38,15 +39,20 @@
     // border-top: 1px solid #979797;  
     background-color: #fff;
     cursor: pointer;
-    border-top: 1px solid #614767;
-    border-bottom: 1px solid #614767;
+    // border-top: 1px solid #614767;
+    border-bottom: 1px solid #2AD2C9;
 }
 
-ul li{
+.bullets{
     list-style-type: disc;
     list-style-position: outside;
     margin-left: 45px;
     font-size: 23px;
+}
+
+li {
+    margin-left: 25px;
+    list-style-type: none;
 }
 
 li:last-child {
@@ -56,5 +62,9 @@ li:last-child {
 .accordion-item {
     padding: 10px 50px 0px 10px;
     font-size: 16px;
+}
+
+.no-border {
+    border-bottom: none;
 }
 
