--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -31,7 +31,7 @@
                         <div class="common-button-styles" (click)="resumeSession()">
                             <div class="button-styling">
                                 Resume
-                                <img class="next-arrow" src="./assets/images/icon_arrow.png">
+                                <img class="next-arrow" src="{{'assets/images/icon_arrow.png' | assetspipe}}">
                             </div>
                         </div>
                     </form>
@@ -58,7 +58,7 @@
                         <div class="common-button-styles">
                             <div (click)="getStarted()" class="button-styling">
                                 Get Started
-                                <img class="next-arrow" src="./assets/images/icon_arrow.png">
+                                <img class="next-arrow" src="{{'assets/images/icon_arrow.png' | assetspipe}}">
                             </div>
                         </div>
                     </form>
