integrated POST API

--- a/src/app/components/conclusion/conclusion.component.html
+++ b/src/app/components/conclusion/conclusion.component.html
@@ -1,4 +1,4 @@
-<section class="conclusion-section error-message-section">
+<section class="conclusion-section error-message-section" *ngIf="showErrorPopup">
     <div class="message-section">
         <span class="error-message-text">There was an error with your submission, please try again</span>
     </div>
