--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="message-section">
+    <div class="message-section" *ngIf="formData.showSuccessMessage">
         <span class="section-heading main-heading">Your session has been recorded!</span>
     </div>
     <div class="landing-section-wrapper session-resume-section" *ngIf="showSessionResumePopup">
