--- a/src/styles.scss
+++ b/src/styles.scss
@@ -529,6 +529,14 @@ input, textarea{
     padding-bottom: 32px;
 }
 
+.no-padding {
+    padding-bottom: 0;
+}
+
+.pb-10 {
+    padding-bottom: 10px;
+}
+
 .prev-arrow-button{
     margin-right:15px;
 }
@@ -677,13 +685,14 @@ input, textarea{
   background-color: #F6f6f6;
   padding:36px;
   width: 68%;
-  margin-bottom: 30px; 
+//   margin-bottom: 30px; 
 }
 
 .plus-stake-holder{
   display:flex;  
   padding-top: 10px;
-  margin:20px 0;
+//   margin:20px 0;
+  margin-bottom: 20px;
   cursor: pointer;
 }
 .add-stake-holder{
