--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -15,7 +15,8 @@
                         </div>
                         <div class="checkbox-input-section" *ngIf="eachFormElem.type === 'textArea'"
                             [ngClass]="{'checkbox-helpfield-section':eachFormElem.isHelpField}">
-                            <label class="input-label-text common-label-padding d-block" [ngClass]="{'font-regular':eachFormElem.isNotes}"
+                            <label class="input-label-text common-label-padding d-block"
+                                [ngClass]="{'font-regular':eachFormElem.isNotes}"
                                 [for]="eachFormElem.name">{{eachFormElem.label}}</label>
                             <textarea [name]="eachFormElem.name" [(ngModel)]="eachFormElem.value" cols="40" rows="5"
                                 class="text-area"></textarea>
@@ -53,8 +54,11 @@
                                 <div class="radio-input-section" *ngIf="eachOption.addDetailsData">
                                     <div class="stake-holder-section add-details-section"
                                         *ngFor="let eachHelpFiled of eachOption.addDetailsData; let formInd=index">
-                                        <div *ngIf="eachOption.addDetailsData.length > 1" class="remove-details-data-icon" (click)="removeDetailsData(eachOption.addDetailsData, formInd)">
-                                            <img class="icon-plus rotate-45" src="{{'assets/images/icon_Plus.png' | assetspipe}}" >
+                                        <div *ngIf="eachOption.addDetailsData.length > 1"
+                                            class="remove-details-data-icon"
+                                            (click)="removeDetailsData(eachOption.addDetailsData, formInd)">
+                                            <img class="icon-plus rotate-45"
+                                                src="{{'assets/images/icon_Plus.png' | assetspipe}}">
                                         </div>
                                         <div class="input-section"
                                             *ngFor="let eachFiled of eachHelpFiled.fields; let fieldInd=index;">
@@ -99,18 +103,21 @@
                         <div *ngIf="eachFormElem.type === 'reference'">
                             <div>{{eachFormElem.label}}</div>
                             <div *ngFor="let eachOption of eachFormElem.options; let ind = index;">
-                                <div class="radio-button-padding" *ngIf="eachOption.value[0].type === 'radio'">
-                                    <div class="input-label-text common-label-padding confirm-text">{{eachOption.label }}</div>
+                                <div *ngIf="eachOption.value[0].type === 'radio'" class="common-block-padding">
+                                    <div class="input-label-text common-label-padding confirm-text">
+                                        {{eachOption.label }}</div>
                                     <div *ngIf="!eachOption.value[0].value">
                                         --
                                     </div>
                                     <div *ngFor="let eachOptionI of eachOption.value[0].options; let indi=index;">
                                         <div *ngIf="eachOption.value[0].value == eachOptionI.value">
-                                            <div class="checkbox-padding pl-20 pt-10" *ngIf="eachOptionI.helpField || eachOptionI.addDetailsData">
+                                            <div class="pb-30"
+                                                *ngIf="eachOptionI.helpField || eachOptionI.addDetailsData">
                                                 <!-- <input disabled type="radio" class="form-radio" [name]="eachOptionI.name+indi" [id]="eachOptionI.name+indi" [value]="eachOptionI.value" [(ngModel)]="eachOption.value[0].value"> -->
-                                                <label [for]="eachOptionI.name+indi" class="input-label-text radio-label-text pl-0 font-regular confirm-radio-text">{{eachOptionI.label}}</label>
+                                                <label [for]="eachOptionI.name+indi"
+                                                    class="input-label-text radio-label-text pl-0 font-regular confirm-radio-text">{{eachOptionI.label}}</label>
                                             </div>
-                                            <div class="checkbox-input-section pl-20" *ngIf="eachOptionI.helpField">
+                                            <div *ngIf="eachOptionI.helpField">
                                                 <div *ngFor="let eachHelpFiled of eachOptionI.helpField; let hfInd = index;"
                                                     class="radio-button-padding">
                                                     <label
@@ -118,12 +125,13 @@
                                                     <div class="">{{eachHelpFiled.value || '--'}}</div>
                                                 </div>
                                             </div>
-                                            <div class="radio-input-section" *ngIf="eachOptionI.addDetailsData">
+                                            <div *ngIf="eachOptionI.addDetailsData">
                                                 <div class="stake-holder-section add-details-section"
                                                     *ngFor="let eachHelpFiled of eachOptionI.addDetailsData; let formInd=index">
                                                     <div class="input-section"
                                                         *ngFor="let eachFiled of eachHelpFiled.fields; let fieldInd=index;">
-                                                        <div class="input-label-text font-regular">{{ eachFiled.label }}</div>
+                                                        <div class="input-label-text font-regular">{{ eachFiled.label }}
+                                                        </div>
                                                         <div class="">{{eachFiled.value || '--'}}</div>
                                                     </div>
                                                 </div>
@@ -136,8 +144,8 @@
                                     </div>
                                 </div>
                                 <div class="common-block-padding" *ngIf="eachOption.value[0].type === 'text'">
-                                    <label
-                                        class="input-label-text common-label-padding">Information to be sent: </label>
+                                    <label class="input-label-text common-label-padding confirm-text">Information to be sent:
+                                    </label>
                                     <div class="input-element">{{eachOption.value[0].value || '--'}}</div>
                                 </div>
                             </div>
@@ -163,11 +171,12 @@
     <div class="right-nav" [ngClass]="{'disable':!metaData.matadata}">
         <div class="right-nav-button-wrapper" [ngClass]="{'disabled-nav':!metaData.matadata}">
             <div *ngIf="openSideNavFlag" class="nav-button-wrapper">
-                <img (click)="closeSideNav()" class="side-nav-icon" src="{{'assets/images/icon_arrow.png' | assetspipe}}">
+                <img (click)="closeSideNav()" class="side-nav-icon"
+                    src="{{'assets/images/icon_arrow.png' | assetspipe}}">
             </div>
             <div *ngIf="!openSideNavFlag " class="nav-button-wrapper">
                 <img (click)="openSideNav()" class="side-nav-icon prev-side-nav-icon"
-                src="{{'assets/images/icon_arrow.png' | assetspipe}}">
+                    src="{{'assets/images/icon_arrow.png' | assetspipe}}">
 
             </div>
         </div>
