IE11 conclusion page scroll issue fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -689,7 +689,7 @@ input, textarea{
 .add-stake-holder{
   padding-left:10px;
 }
-app-form {
+app-form, app-conclusion {
     width: 100%;
     background: #3c1454;
 }
