--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -6,7 +6,7 @@
         <div class="landing-section">
             <div>
                 <section>
-                    <div class="section-heading">Resume session:</div>
+                    <div class="section-heading main-heading">Resume session:</div>
                     <form class="resume-form">
                         <div class="resume-form-wrapper">
                             <div class="question-title"></div>
