--- a/src/styles.scss
+++ b/src/styles.scss
@@ -702,6 +702,9 @@ app-form, app-conclusion {
     width: 100%;
     background: #3c1454;
 }
+app-right-accordian {
+    display: block;
+}
 
 .margin-0{
   margin:0 auto;
