--- a/src/styles.scss
+++ b/src/styles.scss
@@ -676,7 +676,7 @@ input, textarea{
 }
 
 .return-question-text{
-  font-size: 20px;
+//   font-size: 20px;
   color:#191919;
   max-width: 75%;
 }
@@ -692,7 +692,7 @@ input, textarea{
   display:flex;  
   padding-top: 10px;
 //   margin:20px 0;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   cursor: pointer;
 }
 .add-stake-holder{
