--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -149,7 +149,7 @@
                                     <div class="input-element">{{eachOption.value[0].value || '--'}}</div>
                                 </div>
                                 <div class="common-block-padding" *ngIf="eachOption.value[0].type === 'textArea'">
-                                    <label class="input-label-text common-label-padding">Information to be sent: </label>
+                                    <label class="input-label-text common-label-padding confirm-text">Information to be sent: </label>
                                     <div class="input-element">{{eachOption.value[0].value || '--'}}</div>
                                 </div>
                             </div>
