Change back icon opacity

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -181,7 +181,7 @@
                 </div>
                 <div *ngIf="!openSideNavFlag " class="nav-button-wrapper">
                     <img (click)="openSideNav()" class="side-nav-icon prev-side-nav-icon"
-                        src="{{'assets/images/icon_arrow.png' | assetspipe}}">
+                        src="{{'assets/images/back-icon.svg' | assetspipe}}">
     
                 </div>
             </div>
