header issue fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -215,7 +215,7 @@ input, textarea{
     align-items: center;
     z-index: 2;
     // position: fixed;
-    width: 100%;
+    // width: 100%;
     border-bottom: 1px solid #979797;
 }
 
