--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -38,3 +38,13 @@ line-height: 29px;
 .resume-form-wrapper {
     flex: 1;
 }
+.input-section {
+    position: relative;
+    
+}
+.error-msg {
+    position: absolute;
+    right: 5px;
+    bottom: -15px;
+
+}
