--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -78,7 +78,7 @@
                         <div *ngIf="eachFormElem.type === 'checkbox'">
                             <!-- <div class="check-and-radio-heading">{{eachFormElem.label}}</div> -->
                             <div *ngFor="let eachOption of eachFormElem.options; let ind = index;">
-                                <div class="checkbox-padding" [ngClass]="{'no-padding': eachFormElem.isRequirements }">
+                                <div class="checkbox-padding" [ngClass]="{'no-padding': eachFormElem.isRequirements  && eachOption.helpField }">
                                     <input type="checkbox" [id]="eachOption.name+ind" [name]="eachOption.name+ind"
                                         [value]="eachOption.value" [checked]="eachOption.isSelected"
                                         [(ngModel)]="eachOption.isSelected"
