vertical align text in accordions

--- a/src/app/utilities/accordion/accordion.component.html
+++ b/src/app/utilities/accordion/accordion.component.html
@@ -14,7 +14,7 @@
                             [name]="eachQue.formData[0].name" [checked]="eachQue.isAnswered"
                             [(ngModel)]="eachQue.isAnswered">
                         <label [for]="eachQue.formData[0].name" class="input-label-text"></label>
-                        <div>{{ eachQue.question }}</div>
+                        <div class="question-text">{{ eachQue.question }}</div>
                     </div>
                 </div>
             </div>
