--- a/src/app/utilities/right-accordian/right-accordian.component.scss
+++ b/src/app/utilities/right-accordian/right-accordian.component.scss
@@ -16,6 +16,7 @@
     font-size: 16px;
     font-weight: 600;
     margin-right: 25px;
+    padding-top: 3px;
 }
 .input-label-text {
     // line-height: 18px;
