--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -14,17 +14,20 @@
                                 <div class="customer-details">
                                     <div class="resume-session-properties">
                                         <label class="input-label-text resume-session-text">Sales Rep Name: </label>
-                                        <label class="input-label-text resume-session-text">{{saleRepName || '-'}}</label>
+                                        <label
+                                            class="input-label-text resume-session-text">{{saleRepName || '-'}}</label>
                                     </div>
                                     <div class="resume-session-properties">
                                         <label class="input-label-text resume-session-text">Customer Name: </label>
-                                        <label class="input-label-text resume-session-text">{{customerName || '-'}}</label>
+                                        <label
+                                            class="input-label-text resume-session-text">{{customerName || '-'}}</label>
                                     </div>
                                     <div class="resume-session-properties">
                                         <label class="input-label-text resume-session-text">Customer Company: </label>
-                                        <label class="input-label-text resume-session-text">{{companyName  || '-'}}</label>
+                                        <label
+                                            class="input-label-text resume-session-text">{{companyName  || '-'}}</label>
                                     </div>
-    
+
                                 </div>
                             </div>
                         </div>
@@ -48,13 +51,16 @@
                         <div *ngFor="let dataGroup of userInfoForm.data" class="common-block-padding">
                             <div class="question-title">{{dataGroup.question}}</div>
                             <div *ngFor="let eachFormElem of dataGroup.formData">
-                                <div>
+                                <div class="landing-input-section">
                                     <div class="input-section">
-                                        <label [for]="eachFormElem.name" class="input-label-text">{{eachFormElem.label}}</label>
+                                        <label [for]="eachFormElem.name"
+                                            class="input-label-text">{{eachFormElem.label}}</label>
                                         <input type="text" [name]="eachFormElem.name" [(ngModel)]="eachFormElem.value"
-                                            class="input-element">
-                                            <div class="error-msg" *ngIf="submitted && !eachFormElem.isValid">{{eachFormElem.errorMessage}}</div>
+                                            class="input-element">                                        
                                     </div>
+                                    <div class="error-msg" *ngIf="submitted && !eachFormElem.isValid">
+                                            <div>{{eachFormElem.errorMessage}}</div>
+                                        </div>
                                 </div>
                             </div>
                         </div>
