According text alignment issue

--- a/src/app/utilities/accordion/accordion.component.html
+++ b/src/app/utilities/accordion/accordion.component.html
@@ -42,5 +42,5 @@
         </div>
     
     </p-accordionTab>
-    <div class="accordion-title accordion-heading accordion-header" (click)="gotFinish()">Finish</div>
+    <div class="accordion-title accordion-heading accordion-header finish-text" (click)="gotFinish()">Finish</div>
 </p-accordion>
