--- a/src/app/utilities/accordion/accordion.component.scss
+++ b/src/app/utilities/accordion/accordion.component.scss
@@ -7,7 +7,7 @@
     cursor: pointer;
 }
 .accordion-heading {
-    padding: 25px 15px 25px 45px;
+    padding: 25px 15px 25px 33px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,6 +36,10 @@
     .content-sections {
         border-bottom: none;
     }
+}
+
+.finish-text {
+    padding-left: 40px;
 }
 
 .question-text {
