--- a/src/styles.scss
+++ b/src/styles.scss
@@ -236,7 +236,9 @@ input, textarea{
     width: 100%;
     padding-bottom: 37px;
     min-height: 100vh;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
 }
 
 .landing-section{
