Add margin to stakeholder card

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -689,7 +689,7 @@ input, textarea{
   background-color: #F6f6f6;
   padding:36px;
   width: 68%;
-//   margin-bottom: 30px; 
+  margin-bottom: 30px; 
 }
 
 .plus-stake-holder{
