confirm next steps paddings fix

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -146,11 +146,11 @@
                                 <div class="common-block-padding" *ngIf="eachOption.value[0].type === 'text'">
                                     <label class="input-label-text common-label-padding confirm-text">Information to be sent:
                                     </label>
-                                    <div class="input-element">{{eachOption.value[0].value || '--'}}</div>
+                                    <div>{{eachOption.value[0].value || '--'}}</div>
                                 </div>
                                 <div class="common-block-padding" *ngIf="eachOption.value[0].type === 'textArea'">
                                     <label class="input-label-text common-label-padding confirm-text">Information to be sent: </label>
-                                    <div class="input-element">{{eachOption.value[0].value || '--'}}</div>
+                                    <div>{{eachOption.value[0].value || '--'}}</div>
                                 </div>
                             </div>
                         </div>
