open accordion method updated with new requirements

--- a/src/app/utilities/right-accordian/right-accordian.component.html
+++ b/src/app/utilities/right-accordian/right-accordian.component.html
@@ -1,22 +1,24 @@
-<p-accordion (onOpen)="onTabOpen($event)" #accordion  (onClose)="onTabClose($event)" *ngIf="metaData && metaData.matadata" class="accordion-header no-border">
-    <p-accordionTab header="header" class="accordion-header" [header]="eachMetaData.uid" #accordionElements
-        *ngFor="let eachMetaData of metaData.matadata;let i =index"  >
-        <p-header class="accordion-heading">
-            <div class="accordion-title">{{eachMetaData.heading}}</div>
-            <img src="{{'assets/images/icon_Plus.png' | assetspipe}}" class="icon-plus" *ngIf="openAccordionIndex !== i">
-            <img src="{{'assets/images/icon_Minus.png' | assetspipe}}" class="icon-minus" *ngIf="openAccordionIndex == i">
-        </p-header>
-        <div>
-            <ul>
-                <li *ngFor="let content of eachMetaData.data" [ngClass]="{'bullets':eachMetaData.data.length > 1 }">
-                    <div class="d-flex accordion-heading accordion-item d-block">
-                        <div>
-                            <span class="input-label-text subheading-label-text"
-                                *ngIf="content.subHeading">{{content.subHeading}}: </span>{{content.content}}
+<p-accordion  #accordion    class="accordion-header no-border">
+    <div *ngIf="metaData && metaData.matadata">
+        <p-accordionTab header="header" class="accordion-header" [header]="eachMetaData.uid" #accordionElements
+            *ngFor="let eachMetaData of metaData.matadata;let i =index"  >
+            <p-header class="accordion-heading">
+                <div class="accordion-title">{{eachMetaData.heading}}</div>
+                <img src="{{'assets/images/icon_Plus.png' | assetspipe}}" class="icon-plus" *ngIf="!accordionElements.selected">
+                <img src="{{'assets/images/icon_Minus.png' | assetspipe}}" class="icon-minus" *ngIf="accordionElements.selected">
+            </p-header>
+            <div>
+                <ul>
+                    <li *ngFor="let content of eachMetaData.data" [ngClass]="{'bullets':eachMetaData.data.length > 1 }">
+                        <div class="d-flex accordion-heading accordion-item d-block">
+                            <div>
+                                <span class="input-label-text subheading-label-text"
+                                    *ngIf="content.subHeading">{{content.subHeading}}: </span>{{content.content}}
+                            </div>
                         </div>
-                    </div>
-                </li>
-            </ul>            
-        </div>
-    </p-accordionTab>
+                    </li>
+                </ul>            
+            </div>
+        </p-accordionTab>
+    </div>
 </p-accordion>
