--- a/src/styles.scss
+++ b/src/styles.scss
@@ -685,9 +685,8 @@ input, textarea{
 }
 
 .return-question-text{
-//   font-size: 20px;
   color:#191919;
-  max-width: 75%;
+  max-width: 72;
 }
 
 .stake-holder-section{
