background color changed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -708,7 +708,7 @@ input, textarea{
 }
 app-form, app-conclusion {
     width: 100%;
-    background: #3c1454;
+    background: #614767;
 }
 app-right-accordian {
     display: block;
