--- a/src/app/utilities/right-accordian/right-accordian.component.scss
+++ b/src/app/utilities/right-accordian/right-accordian.component.scss
@@ -22,6 +22,10 @@
     // line-height: 18px;
     // font-size: 16px;
 }
+.bullet-content-header {
+    padding-left: 0px !important;
+    margin-left: 15px;
+}
 .accodion-content-section {
     display: flex;
     align-items: center;
