update landing purple color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -199,7 +199,7 @@ input, textarea {
 
 
 .main-section {
-    background: #3c1454;
+    background: #614767;
     // height: 100%;
     // max-width: 1366px;
     // margin: 0 auto;
