--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,9 @@
         </div>
         <router-outlet></router-outlet>
     </div>
+
+    <div class="loader-wrapper">
+        <div class="loader">
+            <img src="{{'assets/images/loader.gif' | assetspipe}}">
+        </div>
+    </div>
