Unit test fixes
1) min-width 1290px added
2) added opacity to right side accordion

--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -85,7 +85,9 @@ input[type=checkbox] + label:before {
 .disabled-nav{
     background-color: #468c98;
 }
-
+.disabled-nav .side-nav-icon {
+opacity: 0.5;
+}
 .close-add-details {
     display: flex;
     justify-content: flex-end;
