--- a/src/styles.scss
+++ b/src/styles.scss
@@ -146,6 +146,7 @@ body {
     font-family: "MetricHPE";
     font-size: 16px;
     background-color: #614767;
+    min-width: 1280px;
 
 }
 body, app-root {
