--- a/src/styles.scss
+++ b/src/styles.scss
@@ -247,7 +247,7 @@ input, textarea{
     padding: 50px 50px 30px 50px;
     background-color: white;
     box-shadow: 1px 1px 5px -1px;
-    margin: 30px;
+    margin-top: 30px;
     margin-bottom: 0;
     width: 908px;
 }
@@ -723,7 +723,7 @@ app-right-accordian {
     background-color: #fff;
     border: 4px solid #2AD2C9;
     padding: 40px 20px 40px 80px;
-    margin: 25px 30px;
+    margin-top:30px;
 }
 .error-msg {
     display: flex;
