--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -63,6 +63,10 @@
                                         </div>
                                 </div>
                             </div>
+                            
+                        </div>
+                        <div style="width:60%;margin-left: auto;margin-right: auto;">
+                            <p style="font-size:11px;">By providing your information, you agree that HPE may contact you about products, services, exclusive offers and special events. To read more about how HPE may use your information, read HPE’s <a href="https://www.​hpe.​com/us/en/legal/privacy.​html" target="_blank">privacy policy</a>.</p>
                         </div>
                         <div class="common-button-styles">
                             <div (click)="getStarted()" class="button-styling">
