--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -4,8 +4,9 @@
 }
 .question-title {
     font-weight: 500;
-font-size: 24px;
-line-height: 29px;
+    font-size: 24px;
+    line-height: 29px;
+    padding-bottom: 15px;
 }
 .section-heading {
     font-size: 34px;
@@ -45,9 +46,12 @@ line-height: 29px;
 .error-msg {
     position: absolute;
     right: 5px;
-    bottom: -15px;
+    bottom: 5px;
     color: red;
 }
 .landing-input-section{
     position: relative;
+}
+.input-section {
+    padding-bottom: 30px !important;
 }
