fix: disabled the API

--- a/src/app/components/conclusion/conclusion.component.html
+++ b/src/app/components/conclusion/conclusion.component.html
@@ -28,7 +28,7 @@
       Previous
       <img class="prev-arrow" src="{{'assets/images/icon_arrow.png' | assetspipe}}">
     </div>
-    <div class="button-styling finish-button" (click)="finishQuestionaire()">
+    <div class="button-styling finish-button" >
       Finish
       <img class="next-arrow" src="{{'assets/images/icon_arrow.png' | assetspipe}}">
     </div>
